public/css/style.css
/* CSS Reset */
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}

body {
    display: flex;
    align-items: center;
    flex-flow: column;
    line-height: 1;
}

ol,
ul {
    list-style: none;
}

blockquote,
q {
    quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
    content: '';
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

/* Base Looks */
p,
.entry-title>h2 {
    font-family: 'Gill Sans',
    'Gill Sans MT',
    Calibri,
    'Trebuchet MS',
    sans-serif;
    color: rgba(40, 40, 40, 0.88);
    font-size: 1.4rem;
    line-height: 1.4rem;
}

#caption{
  overflow: hidden;
  word-wrap: anywhere;
  margin: 10px 0 20px;
}

span{
    font-family: 'Gill Sans',
    'Gill Sans MT',
    Calibri,
    'Trebuchet MS',
    sans-serif;
    color: rgba(40, 40, 40, 0.88);
    font-size: 1.2rem;
    line-height: 1.2rem;
    font-weight: 200;
}
/* LOGIN */
.login-body {
    background: linear-gradient(to bottom, rgba(73, 174, 228, .8), white) no-repeat
}

.header {
    margin: 8% 5% 10% 5%;
    display: flex;
    text-align: center;
}

.header>h1 {
    color: white;
    font: 400 3rem/3rem normal sans-serif;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

.header,
.login-container {
    display: flex;
    justify-content: center;
}

#login {
    width: 400px;
    padding: 50px 20px;
}

#login,
.signin-options {
    display: flex;
    justify-content: center;
    padding-top: 10px;
}

form {
    display: flex;
    flex-flow: column;
}

h1.login-container.card{
  font-size: 1rem;
}

#createEntryForm{
    display: flex;
    flex-flow: column;
    width: 400px;
    text-align: left;
}

#createEntryForm > *{
  margin-bottom: 10px;
}

.profile-body a{
  color: blue;
  text-decoration: underline;
}

input {
    height: 1.4rem;
}

.signin-container {
    padding-top: 5px;
}

.signin-container>a, a {
    text-decoration: none;
    color: rgb(181, 181, 181);
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

.signin-container,
.login-container {
    flex: 1;
}

.login-button {
    color: whitesmoke;
    background-color: dodgerblue;
    font-family: 'Lucida Sans',
        'Lucida Sans Regular',
        'Lucida Grande',
        'Lucida Sans Unicode',
        Geneva,
        Verdana,
        sans-serif;
    text-decoration: none;
    padding: 4px;
    width: 80px;
    font-size: 1rem;
    cursor: pointer;
    text-align: center;
    margin-left: 40%;
}

.button-container{
    justify-content: flex-end;
}
.card {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    transition: 0.3s;
    padding: 20px;
}

.card:hover {
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

/* Site wide navbar */
/* Add a blue background color to the top navigation */
.topnav {
    position: relative;
    background-color:rgba(73, 174, 228, .8);
    overflow: hidden;
    width: 100vw;
    height: 7%;
}

/* Style the links inside the navigation bar */
.topnav a {
    float: left;
    color: #f2f2f2;
    text-align: center;
    padding: 18px 16px;
    text-decoration: none;
    font-size: 17px;
}

.topnav-centered > h1 a{
    font-size: 2rem;
}

/* Change the color of links on hover */
.topnav a:hover {
    background-color: #ddd;
    color: black;
}

/* Centered section inside the top navigation */
.topnav-centered a {
    float: none;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

/* Right-aligned section inside the top navigation */
.topnav-right {
    float: right;
}

.topnav .icon {
    display: none;
}
/* Responsive navigation menu - display links on top of each other instead of next to each other (for mobile devices) */
@media screen and (max-width: 600px) {
    .topnav a,
    .topnav-right {
        float: none;
        display: block;
    }

    .topnav-centered a {
        position: relative;
        top: 0;
        left: 0;
        transform: none;
    }
}

.test{
  font-size: 40px;
}
@media screen and (max-width: 600px) {


    .topnav a.icon {
        float: right;
        display: block;
    }
}

/* Feed */
.feed-container{
    padding: 5% 8%;
}

.feed-container > ul >li{
    padding: 2% 4%;
    margin-bottom: 20px;
    display: flex;
    flex-flow: column;
    align-items: center;
}

.feed-container > ul > li > a {
    display: flex;
    align-items: center;
    justify-content: center;
    max-width: 70%;
}

.feed-img, .entry-img{
    max-width: 100%;
}

.entry-topper{
    display: flex;
    flex-flow: row;
    justify-content: space-between;
    width: 100%;
    margin-bottom: 20px;
}

/* Like button */
.like-container{
    display: flex;
    justify-content: flex-end;
    margin-top: 10px;
    width: 70%;
}
.fa-heart{
    color: rgba(213, 8, 8, 0.914);
    cursor: pointer;
}

/* Entry */

.like-delete{
    display: flex;
    flex-flow: column;
    justify-content: flex-start;
    align-items: flex-end;
    width: 50%;
}

.like-delete > form {
    width: 4rem;
}

/* Entry - Comments */
.interact-container{
    display: flex;
    flex-flow: row-reverse;
    justify-content: space-between;
    width: 100%;
}

#createCommentForm{
    margin-bottom: 5px;
}
#createCommentForm > div{
    display: flex;
}

#createCommentForm > div > input{
    margin-right: 2rem;
}

.comment-section li{
    padding: 5px 0;
}
/* Profile */
.profile-body {
    display: flex;
    flex-direction: column;
    text-align: center;
    background: linear-gradient(to bottom, rgba(73, 174, 228, .8), white) no-repeat
}

/* style button to post a picture */

/* style button to add picture entry */


/* style button to go home */


/* style button to see messages */

/* style button to go to a user's profile */

/* style button to like an entry */

/* style button to see and add comments on an entry */

